# pyprof

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pyprof/: profile_cpu.py  profile_gpu.py  profile_memory.py  profiler.py
test/: test_profiler.py
